Revert "java 17 upgrade "